# codex-py

./: .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_INFO.md  README.md  pyproject.toml  setup.py
codex_sdk/: __init__.py  codex.py  events.py  exec.py  items.py  thread.py
examples/: basic_usage.py  configuration_example.py  resume_thread.py  streaming_example.py  structured_output.py
tests/: __init__.py  test_imports.py
